--- a/style.css
+++ b/style.css
@@ -13,3 +13,12 @@
     font-size: 40px;
     background-color: black;
 }
+.change4{
+    color: white;
+    font-size: 60px;
+    background-color: blue;
+}
+.change5{
+    color: black;
+    font-size: 40px;
+}
